# fast-xml

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
include/: xml_parser.h  xml_utils.h  xmlnode.h  xmltoken.h
include/fast-xml/: heap_xml_parser.h  heap_xml_tokenizer.h  heapxmlnode.h  heapxmltoken.h  slow_xml_parser.h  slow_xml_tokenizer.h  slowxmlnode.h  slowxmltoken.h  tokentype.h  xml_parser.h  xml_tokenizer.h  xml_utils.h  xmlfile.h  xmlnode.h  xmltoken.h
include/fastxml/: heap_xml_parser.h  heap_xml_tokenizer.h  heapxmlnode.h  heapxmltoken.h  outxmlnode.h  tokentype.h  xml_parser.h  xml_tokenizer.h  xml_utils.h  xmlfile.h  xmlnode.h  xmltoken.h
src/: main.cpp  rxmlfmt.cpp  settings.h  slowxmlfmt.cpp  txmlfmt.cpp
test/: CMakeLists.txt  heap_xml_node_test.cpp  heap_xml_tokenizer_test.cpp  out_xml_node_test.cpp  slow_xml_node_test.cpp  slow_xml_tokenizer_test.cpp  test_data_generator.cpp  tests.cpp  uggly.xml  xml_node_test.cpp  xml_parser_test.cpp  xml_tokenizer_test.cpp
